crates/uitest/fixtures/ty_check/cast_invalid.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/cast_invalid.fe
---
error[8-0031]: type annotation is needed
   ┌─ cast_invalid.fe:14:5
   │
14 │     256 as u8
   │     ^^^
   │     │
   │     type annotation is needed
   │     no default type is provided for an integer type. consider giving integer type

error[8-0055]: cast is not provably lossless
  ┌─ cast_invalid.fe:2:5
  │
2 │     x as i64
  │     ^^^^^^^^ cannot cast `u64` to `i64` with `as`
  │
  = try using `.downcast()` for checked narrowing/sign changes, or `.downcast_truncate()` / `.downcast_saturate()` / `.downcast_unchecked()`

error[8-0055]: cast is not provably lossless
  ┌─ cast_invalid.fe:6:5
  │
6 │     x as u64
  │     ^^^^^^^^ cannot cast `i64` to `u64` with `as`
  │
  = try using `.downcast()` for checked narrowing/sign changes, or `.downcast_truncate()` / `.downcast_saturate()` / `.downcast_unchecked()`

error[8-0055]: cast is not provably lossless
   ┌─ cast_invalid.fe:10:5
   │
10 │     x as u8
   │     ^^^^^^^ cannot cast `bool` to `u8` with `as`
   │
   = casts involving `bool` are not supported

error[8-0055]: cast is not provably lossless
   ┌─ cast_invalid.fe:14:5
   │
14 │     256 as u8
   │     ^^^^^^^^^ cannot cast `{integer}` to `u8` with `as`
   │
   = try using `.downcast()` for checked narrowing/sign changes, or `.downcast_truncate()` / `.downcast_saturate()` / `.downcast_unchecked()`
   = integer literal `256` is not representable in `u8`
